welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: illegal start of simple pattern
	var boolean vert = getGroundColor(); 
                         ^SlugTracking:7: error: '=' expected but ';' found.
	var boolean vert = getGroundColor(); 
                                           ^