welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = 
{
	if(estFaceMur())
		return false
	recule()
	var boolean vert = getGroundColor(); 
	avance()
	return vert
}        
